# auth-fapi

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  develop.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  python.yml
alembic/: env.py
alembic/versions/: 9e9890988855_create_table_users.py  e3f872f026c6_create_table_users.py
config/: __init__.py  auth.py  connection.py  db.py
db/: __init__.py  base.py  database.py  redis.py
models/: __init__.py  users.py
schemas/: __init__.py  items.py  login.py  users.py
tests/: conftest.py  test_config.py  test_database.py  test_import_models.py  test_items.py  test_jwt.py  test_main.py  test_migrations.py  test_redis.py  test_schema_login.py  test_schema_model_users.py  test_schema_users.py  test_views_healthcheck.py  test_views_login.py  test_views_users.py
utils/: auth.py  password.py
views/: healthcheck.py  items.py  login.py  users.py  welcome.py
