[project]
name = "auth-fapi"
version = "0.1.0"
description = "Auth service for educational purposes"
authors = [{ name = "Ilia Dmitriev", email = "ilia.dmitriev@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "asyncmy>=0.2.9",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "greenlet>=3.1.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.10",
    "python-jose>=3.4.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "httpx>=0.27.2",
    "pdoc3>=0.11.6",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    "venv",
    "alembic",
    ".venv",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-rx -rP -v"


[tool.coverage.run]
source = ["."]
branch = true
parallel = true
concurrency = ["greenlet"]
omit = ["venv/*", "tests/*", "alembic/versions/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true
